# Euro-NeurIPS-2022

./: .gitignore  .gitmodules  LICENSE.md  README.md  TEAM.txt  analysis.py  benchmark.py  benchmark_dynamic.py  controller.py  create_submission.sh  dynamic_tools.py  environment.py  hgspy.py  install.sh  make_dynamic_parameters.py  make_dynamic_simulation_parameters.py  make_static_parameters.py  metadata  plotting.py  pyproject.toml  run.sh  setup.cfg  sisr.py  solver.py  statistics.py  tools.py  train_rl_model.py  tune.py
.github/workflows/: CI.yml
baselines/hgs_vrptw/: .clang-format  .gitignore  Makefile
baselines/strategies/: _strategies.py
configs/: analysis.toml  benchmark.toml  benchmark_dynamic.toml  solver.toml
data/: README.md
data/baseline/: best_known_solutions.csv
dynamic/: __init__.py  __main__.py  configs.py  dynamic_environment.py  dynamic_tools.py  environment.py  run_baseline.py  run_dispatch.py  run_oracle.py  run_random.py  run_rollout.py  solve_dynamic.py  solve_static.py  solver.py  train_rl_model.py  utils.py
dynamic/dqn/: run_dqn.py  utils.py
dynamic/random/: random_dispatch.py
dynamic/rollout/: constants.py  rollout.py  sim_config.py  simulate_instance.py  solve_simulation.py
dynamic/strategies/: __init__.py  baselines.py  remove_outliers.py
hgs_vrptw/: .clang-format  CMakeLists.txt
hgs_vrptw/include/: CircleSector.h  CommandLine.h  Config.h  Genetic.h  GeneticAlgorithm.h  Individual.h  LocalSearch.h  Matrix.h  Node.h  Params.h  Penalties.h  Population.h  Result.h  Route.h  Split.h  Statistics.h  TimeWindowSegment.h  XorShift128.h  commandline.h  crossover.h  math.h  mutation.h  operators.h  xorshift128.h
hgs_vrptw/include/operators/: Exchange.h  LocalSearchOperator.h  MoveSingleClient.h  MoveTwoClients.h  MoveTwoClientsReversed.h  RelocateStar.h  ReverseExchange.h  SwapStar.h  SwapTwoClientPairs.h  SwapTwoClientsForOne.h  SwapTwoSingleClients.h  TwoOpt.h  crossover.h
hgs_vrptw/include/stop/: MaxIterations.h  MaxRuntime.h
hgs_vrptw/src/: CMakeLists.txt  Genetic.cpp  GeneticAlgorithm.cpp  Individual.cpp  LocalSearch.cpp  Node.cpp  Params.cpp  Population.cpp  Result.cpp  Route.cpp  Split.cpp  Statistics.cpp  bindings.cpp  crossover.cpp  main.cpp
hgs_vrptw/src/crossover/: alternatingExchange.cpp  alternatingPositionCrossover.cpp  brokenPairs.cpp  brokenPairsExchange.cpp  crossover.cpp  edgeAssembly.cpp  orderedExchange.cpp  selectiveRouteExchange.cpp  stringRemovalExchange.cpp  stringRemovals.cpp
hgs_vrptw/src/mutation/: stringRemovals.cpp
hgs_vrptw/src/operators/: Exchange.cpp  MoveSingleClient.cpp  MoveTwoClients.cpp  MoveTwoClientsReversed.cpp  RelocateStar.cpp  ReverseExchange.cpp  SwapStar.cpp  SwapTwoClientPairs.cpp  SwapTwoClientsForOne.cpp  SwapTwoSingleClients.cpp  TwoOpt.cpp  moveSingleClient.cpp  moveTwoClients.cpp  moveTwoClientsReversed.cpp  operators.cpp  ordered.cpp  orderedExchange.cpp  relocateStar.cpp  selectiveRouteExchange.cpp  swapStar.cpp  swapTwoClientPairs.cpp  swapTwoClientsForOne.cpp  swapTwoSingleClients.cpp  twoOptBetweenRoutes.cpp  twoOptBetweenTrips.cpp  twoOptWithinRoute.cpp  twoOptWithinTrip.cpp
hgs_vrptw/test/: CMakeLists.txt
notebooks/: baseline_performance.ipynb  dynamic-tuning.ipynb  node-based-ls-moves-classifier.ipynb  predict_bad_ls_moves.ipynb  route-based-ls-moves-classifier.ipynb  static-tuning.ipynb
python/classes/: Measures.py  __init__.py
python/functions/: __init__.py  solve.py
static/: __init__.py  config.py  solve_static.py  solver.py
strategies/: __init__.py  config.py  run_dispatch.py  run_oracle.py  solve_dynamic.py  solve_hindsight.py  solve_static.py
(+3014 files in other folders)
