[tool.poetry]
name = "euro-neurips-2022"
version = "0.1.0"
description = ""
authors = [
    "Doorn, Jasper van <j.m.h.van.doorn@vu.nl>",
    "Heide, Lieke van der <l.m.van.der.heide@rug.nl>",
    "Jansen, Yde <yde_jansen@hotmail.com>",
    "Lan, Leon <l.lan@vu.nl>",
    "Pentinga, Luuk <l.pentinga@rug.nl>",
    "Wouda, Niels <n.a.wouda@rug.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9, <4.0"

# From original requirements.txt
numpy = "1.22.2"
matplotlib = "3.5.1"
tabulate = "^0.8.10"


[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
