[tool.poetry]
name = "euro-neurips-2022"
version = "0.1.0"
description = ""
authors = [
    "Doorn, Jasper van <j.m.h.van.doorn@vu.nl>",
    "Lan, Leon <l.lan@vu.nl>",
    "Pentinga, Luuk <l.pentinga@rug.nl>",
    "Wouda, Niels <n.a.wouda@rug.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8, <4.0"

# From original requirements.txt
numpy = "^1.22.2"
matplotlib = "^3.5.1"
tomli = "^2.0.1"
tqdm = "^4.64.0"

[tool.poetry.group.tune]
optional = true

[tool.poetry.group.tune.dependencies]
tomli-w = "^1.0.0"
scipy = "^1.9.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-import-order = "^0.18.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
exclude = '''
hgs_vrptw
| controller\.py
| environment\.py
| tools\.py
| dynamic/dqn
| dynamic/supervised
'''
